# native_libs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
samples/: CMakeLists.txt
samples/alimer_gpu_tests/: main.c
samples/alimer_image_tests/: main.cpp
samples/sdl_tests/: main.c
src/: CMakeLists.txt
src/D3D12MemoryAllocator/: CMakeLists.txt
src/D3D12MemoryAllocator/include/: D3D12MemAlloc.h  D3D12MemAlloc_Exports.h
src/D3D12MemoryAllocator/src/: D3D12MemAlloc_Exports.cpp
src/alimer_audio/: CMakeLists.txt  alimer_audio.c  alimer_audio.h
src/alimer_gpu/: CMakeLists.txt
src/alimer_gpu/include/: alimer_gpu.h
src/alimer_gpu/src/: alimer_gpu.c  alimer_gpu_d3d12.cpp  alimer_gpu_internal.h  alimer_gpu_vulkan.cpp
src/alimer_image/: CMakeLists.txt  alimer_image.c  alimer_image.h
src/alimer_native/: CMakeLists.txt
src/alimer_native/include/: alimer.h
src/alimer_native/src/: alimer_audio.c  alimer_font.c  alimer_image.c  alimer_internal.h  alimer_memory.c
src/cgltf/: CMakeLists.txt  cgltf.c
src/cimgui/: CMakeLists.txt
src/cimguizmo/: CMakeLists.txt
src/cimnodes/: CMakeLists.txt
src/cimplot/: CMakeLists.txt
src/ktx/: CMakeLists.txt
src/meshoptimizer/: CMakeLists.txt
src/spirv-cross/: CMakeLists.txt
src/spirv-reflect/: CMakeLists.txt  spirv_reflect.h
src/ufbx/: CMakeLists.txt  ufbx.c
src/vma/: CMakeLists.txt
src/vma/src/: vk_mem_alloc.cpp
