set(TARGET_NAME cgltf)

file(GLOB SOURCE_FILES
    cgltf.h
    cgltf_write.h
    cgltf.c
)
add_library(${TARGET_NAME} SHARED ${SOURCE_FILES})

set_target_properties(${TARGET_NAME}
  PROPERTIES
    C_STANDARD 11
    WINDOWS_EXPORT_ALL_SYMBOLS ON
)

install(TARGETS ${TARGET_NAME}
    ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION  ${CMAKE_INSTALL_BINDIR}
)
